<resources>
    <string name="app_name">changeYourHabit</string>
    <string name="tittle">Cambia tu habito</string>
    <string name="add_new">Agregar</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesady">Miercoles</string>
    <string name="thusday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sabado</string>
    <string name="sunday">Domingo</string>
    <string name="Calendar">calendario</string>
    <string name="setting">configuracion</string>
    <string name="calendar">Calendario</string>
    <string name="delete_points">Quitar</string>
    <string name="last_time">Ultima vez</string>
    <string name="pref_night_off">off</string>
    <string name="pref_key_night">key_night_mode</string>
    <string name="pref_night_summary">select a dark or light theme</string>
    <string name="pref_night_title">night_mode</string>
    <string name="pref_night_auto">auto</string>
    <string name="pref_night_on">on</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="night_mode_on">Night mode</string>
    <string name="night_mode_off">Day mode</string>
</resources>